src/tests/ci/assignment_5_functions/invalid_semantic/31_function_wrong_arg_type.c
int takes_ptr(int* p) {
    return *p;
}

int main() {
    return takes_ptr(5);
}